# farm_robot

./: save_map_update.sh
arduino_system/: CMakeLists.txt
arduino_system/launch/: arduino.launch.py  hardware.launch.py  rplidar_a2.launch.py
arduino_system/src/: base_controller.cpp  odometry_node.cpp  serial_interface_node.cpp  serial_node.cpp  serial_node_without.cpp  twist_to_motor.cpp
farmbot_carto/: CMakeLists.txt
farmbot_carto/launch/: occupancy_grid.launch.py
farmbot_description/: CMakeLists.txt
farmbot_description/launch/: view_robot.launch.py
farmbot_description/rviz/: diffbot_view.rviz
farmbot_description/urdf/: diffbot.urdf.xacro  diffbot_description.urdf.xacro  robot.urdf
farmbot_ekf/: CMakeLists.txt  TODO.md
farmbot_ekf/config/: nav2_localization.yaml  original_ekf.yaml
farmbot_ekf/launch/: ekf.launch.py
mytmux/: .tmuxinator.yaml
robot_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robot_ws/log/: latest_build
robot_ws/src/: camera.py  save_map_update.sh
robot_ws/src/farm_robot-main/arduino_system/: CMakeLists.txt
robot_ws/src/farm_robot-main/arduino_system/config/: twist_mux.yaml
robot_ws/src/farm_robot-main/arduino_system/launch/: arduino.launch.py
robot_ws/src/farm_robot-main/arduino_system/src/: .twist_to_motor.cpp.swp  base_controller.cpp  twist_to_motor.cpp
robot_ws/src/farm_robot-main/farmbot_carto/: README.md  TODO.md
robot_ws/src/farm_robot-main/farmbot_ekf/: README.md  package.xml
robot_ws/src/farm_robot-main/farmbot_nav2/: CMakeLists.txt  README.md
robot_ws/src/farm_robot-main/mytmux/: .tmuxinator.yaml
robot_ws/src/farm_robot-main/ros2_megaboard/: motor.ino  pid.ino  ros2_megaboard.ino  variables.h
robot_ws/src/farm_robot-main/ros_flutter_gui_app_web/: flutter_bootstrap.js  (+4 more)
ros2_megaboard/: encoder.ino  ros2_megaboard.ino  variables.h
(+99 files in other folders)
